Remove base.css iframe margin to fix downward shift

--- a/static/css/blogpost.css
+++ b/static/css/blogpost.css
@@ -58,6 +58,7 @@
     width: 100%;
     max-width: 100%;
     border: none;
+    margin: 0;
 }
 
 .blog-content iframe[src*="youtube.com"],
